@@ -1,23 +1,27 @@
 package com.benhsoan.domain.auth;
 
+import java.time.Instant;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashSet;
+import java.util.Objects;
+import java.util.Set;
+import java.util.UUID;
+
+import com.benhsoan.domain.auth.enums.Permission;
+import com.benhsoan.domain.shared.Guard.Guard;
+import com.benhsoan.domain.shared.exception.ValidationException;
+
 import lombok.AccessLevel;
-import lombok.AllArgsConstructor;
-import lombok.Builder;
 import lombok.EqualsAndHashCode;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.ToString;
 
-import java.time.Instant;
-import java.util.Set;
-import java.util.UUID;
-
 @Getter
-@Builder
 @ToString
 @EqualsAndHashCode(of = "id")
 @NoArgsConstructor(access = AccessLevel.PROTECTED)
-@AllArgsConstructor(access = AccessLevel.PRIVATE)
 public class Role {
 
     private UUID id;
@@ -26,25 +30,100 @@ public class Role {
 
     private String description;
 
-    @Builder.Default
-    private Set<Permission> permissions = Set.of();
-
-    private boolean isSystem;
+    private boolean system;
 
     private Instant createdAt;
 
     private Instant updatedAt;
 
+    private final Set<Permission> permissions = new HashSet<>();
+
+    private Role(
+            UUID id,
+            String name,
+            String description,
+            boolean system,
+            Instant createdAt,
+            Instant updatedAt,
+            Set<Permission> permissions
+    ) {
+        this.id = Objects.requireNonNull(id);
+        this.name = Guard.require(name, "Role name");
+        this.description = description;
+        this.system = system;
+        this.createdAt = Objects.requireNonNull(createdAt);
+        this.updatedAt = updatedAt;
+
+        if (permissions != null) {
+            this.permissions.addAll(permissions);
+        }
+    }
+
+    public static Role create(
+            String name,
+            String description,
+            boolean system,
+            Set<Permission> permissions
+    ) {
+        Instant now = Instant.now();
+
+        return new Role(
+                UUID.randomUUID(),
+                name,
+                description,
+                system,
+                now,
+                now,
+                permissions
+        );
+    }
+
+    public static Role restore(
+            UUID id,
+            String name,
+            String description,
+            boolean system,
+            Instant createdAt,
+            Instant updatedAt,
+            Set<Permission> permissions
+    ) {
+        return new Role(
+                id,
+                name,
+                description,
+                system,
+                createdAt,
+                updatedAt,
+                permissions
+        );
+    }
+
+    public void rename(String name) {
+        if (system) {
+            throw new ValidationException("System role cannot be renamed.");
+        }
+
+        this.name = Guard.require(name, "Role name");
+        this.updatedAt = Instant.now();
+    }
+
+    public void changeDescription(String description) {
+        this.description = description;
+        this.updatedAt = Instant.now();
+    }
+
     public void addPermission(Permission permission) {
-        this.permissions = new java.util.HashSet<>(this.permissions);
-        this.permissions.add(permission);
-        this.permissions = Set.copyOf(this.permissions);
+        Objects.requireNonNull(permission);
+
+        if (permissions.add(permission)) {
+            updatedAt = Instant.now();
+        }
     }
 
     public void removePermission(Permission permission) {
-        this.permissions = new java.util.HashSet<>(this.permissions);
-        this.permissions.remove(permission);
-        this.permissions = Set.copyOf(this.permissions);
+        if (permissions.remove(permission)) {
+            updatedAt = Instant.now();
+        }
     }
 
     public boolean hasPermission(Permission permission) {
@@ -52,74 +131,15 @@ public class Role {
     }
 
     public boolean hasAnyPermission(Permission... permissions) {
-        return Set.of(permissions).stream().anyMatch(this.permissions::contains);
+        return Arrays.stream(permissions)
+                .anyMatch(this.permissions::contains);
     }
 
     public boolean hasAllPermissions(Permission... permissions) {
-        return this.permissions.containsAll(Set.of(permissions));
+        return this.permissions.containsAll(Arrays.asList(permissions));
     }
 
-    public static Role admin() {
-        return Role.builder()
-                .name("ADMIN")
-                .description("Quản trị viên hệ thống")
-                .permissions(Set.of(Permission.values()))
-                .isSystem(true)
-                .build();
-    }
-
-    public static Role doctor() {
-        return Role.builder()
-                .name("DOCTOR")
-                .description("Bác sĩ")
-                .permissions(Set.of(
-                        Permission.PATIENT_CREATE, Permission.PATIENT_READ, Permission.PATIENT_UPDATE,
-                        Permission.RECORD_CREATE, Permission.RECORD_READ, Permission.RECORD_UPDATE, Permission.RECORD_UPDATE_STATUS,
-                        Permission.PRESCRIPTION_CREATE, Permission.PRESCRIPTION_READ, Permission.PRESCRIPTION_UPDATE, Permission.PRESCRIPTION_DELETE,
-                        Permission.APPOINTMENT_CREATE, Permission.APPOINTMENT_READ, Permission.APPOINTMENT_UPDATE,
-                        Permission.VITAL_SIGN_CREATE, Permission.VITAL_SIGN_READ, Permission.VITAL_SIGN_UPDATE,
-                        Permission.DIAGNOSIS_CREATE, Permission.DIAGNOSIS_READ, Permission.DIAGNOSIS_UPDATE
-                ))
-                .isSystem(true)
-                .build();
-    }
-
-    public static Role nurse() {
-        return Role.builder()
-                .name("NURSE")
-                .description("Y tá")
-                .permissions(Set.of(
-                        Permission.PATIENT_READ,
-                        Permission.RECORD_READ, Permission.RECORD_UPDATE_STATUS,
-                        Permission.APPOINTMENT_READ,
-                        Permission.VITAL_SIGN_CREATE, Permission.VITAL_SIGN_READ, Permission.VITAL_SIGN_UPDATE
-                ))
-                .isSystem(true)
-                .build();
-    }
-
-    public static Role receptionist() {
-        return Role.builder()
-                .name("RECEPTIONIST")
-                .description("Lễ tân")
-                .permissions(Set.of(
-                        Permission.PATIENT_CREATE, Permission.PATIENT_READ, Permission.PATIENT_UPDATE,
-                        Permission.APPOINTMENT_CREATE, Permission.APPOINTMENT_READ, Permission.APPOINTMENT_UPDATE, Permission.APPOINTMENT_DELETE,
-                        Permission.INVOICE_CREATE, Permission.INVOICE_READ, Permission.INVOICE_UPDATE
-                ))
-                .isSystem(true)
-                .build();
-    }
-
-    public static Role pharmacist() {
-        return Role.builder()
-                .name("PHARMACIST")
-                .description("Dược sĩ")
-                .permissions(Set.of(
-                        Permission.PRESCRIPTION_READ, Permission.PRESCRIPTION_UPDATE_STATUS,
-                        Permission.PHARMACY_CREATE, Permission.PHARMACY_READ, Permission.PHARMACY_UPDATE
-                ))
-                .isSystem(true)
-                .build();
+    public Set<Permission> getPermissions() {
+        return Collections.unmodifiableSet(permissions);
     }
 }
